image update and container for paragraphs

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -2,9 +2,10 @@
 {%block body_block%}
 
 <h1>Projects</h1>
+<div class="container">
 <p>Current projects are all related to the Python course i am taking
     but i have a side projects that is a Ecommers site that 
     i am making in django
 
-</p>
+</p></div>
 {%endblock%}
