--- a/templates/skills.html
+++ b/templates/skills.html
@@ -1,16 +1,19 @@
 {% extends "base.html"%}
 {%block body_block%}
 <h1>Skills</h1>
-
+<div class="container">
 <p>I have many skills i am a jack all of trade and even master of some.</p>
 <P>I love to learn and i have no specific intrest, i am intressted in most things and subjects
     and thats i both a curse and a blessing. well i do disklike some things more then others 
     and like other more then i should but over all i am curius about everything and nothing 
 </P>
+</div>
+<div class="container">
 <p>i been working with computers and networks since an early age i was on the now called 
     internet in 89 and mainly played MUDS i was useing my alltime favorite computer AMIGA 
     at that time and i still miss her
 </p>
+
 <p>
     on the c64 i started some basic coding but since i am dyslexic basic coding was horrible
     one error and you had the rewrite the hole code  
@@ -36,7 +39,7 @@
 <p>
     Now i am yet again back at learning to code currently learning Python and javascript but mainly Python
     python fits me well since its a more forgiving language and esier to find typos then in older languages
-</p>
+</p></div>
 
 
 
