--- a/templates/about.html
+++ b/templates/about.html
@@ -1,13 +1,19 @@
 {% extends "base.html"%}
+{%load static%}
+
 {%block body_block%}
-<H1 class=''>About me </H1>
-<img src="" alt="image of me">
+<H1 >About me </H1>
+<div class="container">
+    <img src="{%static 'images/ygberg.jpg'%}" class="rounded-circle" alt="me" width="100" height="100">
+</div>
+    <div class="container">
 <p>Hi My name is Fredrik Ygberg i am 45 years and lives in a small town called Bålsta.</p>
 <p>Bålsta is a small community that is growing rampartly and is right in the middle between Enköping
     Uppsala and Stockholm. The regional borders between Uppsala and Stockholm is the same as the
     boarder between Bålsta and Bro
 </p>
-
+</div>
+<div class="container">
 <P>Family:
     i live with my wife Jessica and my two daughters Hedda who is 11 and Siri that is 8 soon 9 (15 june)
     we live in a small Atrium house on a the north east hill just about the centrum of the small 
@@ -17,5 +23,5 @@
     she was my first real girlfriend and we hanged every day for 2 years we then broke up but we got 
     to getter many times under the years and in 2005 we got back to geather again 
     and this time it stuck and we later got married and soon after that we had our first child</p>
-</P>
+</P></div>
 {%endblock%}
